--- a/app/src/main/res/layout/activity_playback.xml
+++ b/app/src/main/res/layout/activity_playback.xml
@@ -1,14 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="horizontal">
+    android:layout_height="match_parent">
+
 
     <SurfaceView
         android:id="@+id/surface_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <LinearLayout
+        android:id="@+id/channel_title"
+        android:layout_width="750dp"
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        android:visibility="visible"
+        android:layout_marginTop="30dp"
+        android:background="#707070"
+        android:layout_centerHorizontal="true"
+        >
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/channel_number"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="50dp"
+            android:textColor="#C0C0C0"
+            android:textStyle="normal"
+            android:layout_weight="1"
+            android:gravity="center"
+           />
+
+        <TextView
+            android:id="@+id/channel_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:textColor="#C0C0C0"
+            android:textStyle="normal"
+            android:textSize="50dp"
+            android:gravity="center"
+           />
+
+        <ImageView
+            android:id="@+id/channel_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="15dp"
+            android:gravity="center"/>
+
+
+    </LinearLayout>
+
+</RelativeLayout>
