Added Database and automatically closing Info banner feature
Done:
+ Implemented timer closing feature for info banner
+ Application starts with last watched channel

Test:
nWedia shield

Mannual testing pass fine. Active channel porting from database works fine.
Info banner hiding works fine. Playback doesn'work because interupted internet connection.

--- a/app/src/main/res/layout/activity_playback.xml
+++ b/app/src/main/res/layout/activity_playback.xml
@@ -14,7 +14,7 @@
         android:layout_width="750dp"
         android:layout_height="100dp"
         android:orientation="horizontal"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_marginTop="30dp"
         android:background="#707070"
         android:layout_centerHorizontal="true"
