--- a/app/src/main/res/layout/activity_playback.xml
+++ b/app/src/main/res/layout/activity_playback.xml
@@ -47,9 +47,43 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_margin="15dp"
+            android:padding="15dp"
             android:gravity="center"/>
 
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/channel_list"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:gravity="left"
+        android:background="#9e9e9e9e"
+        android:textColor="#C0C0C0"
+        >
+
+        <TextView
+            android:id="@+id/list_title"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="@string/channel_list"
+            android:textStyle="normal"
+            android:textSize="20dp"
+            android:paddingLeft="10dp"
+            android:background="#707070"
+            android:gravity="center_vertical"
+            />
+
+        <ListView
+            android:id="@+id/list_of_all_channels"
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:textStyle="normal"
+            android:textSize="10dp">
+
+        </ListView>
 
     </LinearLayout>
 
